Remove theme wrappers for a standalone 404 page layout

--- a/404.html
+++ b/404.html
@@ -4,13 +4,7 @@ title: 404
 permalink: /404.html
 ---
 
-<style>
-  /* Override Chirpy's default page wrapper for full-screen 404 */
-  #core-wrapper { max-width: none; padding: 0; margin: 0; }
-  #main-wrapper { margin: 0; }
-  article { padding: 0; }
-  .existential-404 { margin: 0; }
-</style>
+<!-- Standalone 404 page without theme wrappers -->
 
 <section class="existential-404" aria-labelledby="nf-title">
   <div class="bg"></div>
