--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@ permalink: /404.html
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 | Nothingness</title>
-  <link rel="icon" type="image/png" href="/assets/img/favicon.png">
+  <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
   <style>
     :root {
       --bg-start: #0b1020;
