Fix: Update favicon links in 404 page and add custom theme styles

--- a/assets/404.html
+++ b/assets/404.html
@@ -9,7 +9,8 @@ permalink: /404.html
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>404 - Not Found</title>
-  <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="/assets/img/favicons/favicon.svg">
+  <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico">
 </head>
 <body style="margin:0;padding:0;overflow:hidden;height:100vh;width:100vw;background:#000;font-family:sans-serif;color:#e5e7eb;">
 
