--- a/assets/404.html
+++ b/assets/404.html
@@ -11,6 +11,43 @@ permalink: /404.html
   <title>404 - Not Found</title>
   <link rel="icon" type="image/svg+xml" href="/assets/img/favicons/favicon.svg">
   <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico">
+  <style>
+    .btn-404 {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.6rem;
+      padding: 0.8rem 1.5rem;
+      border-radius: 12px;
+      font-weight: 600;
+      font-size: 0.95rem;
+      cursor: pointer;
+      text-decoration: none;
+      transition: all 0.2s ease;
+      backdrop-filter: blur(4px);
+      border: 1px solid rgba(255,255,255,0.12);
+    }
+    .btn-return {
+      background: #ffffff;
+      color: #0f172a;
+    }
+    .btn-return:hover {
+      background: #ffd700;
+      color: #000;
+      border-color: #ffd700;
+      box-shadow: 0 0 15px rgba(255, 215, 0, 0.4);
+    }
+    .btn-oracle {
+      background: rgba(15, 23, 42, 0.6);
+      color: #e5e7eb;
+    }
+    .btn-oracle:hover {
+      border-color: #ffd700;
+      color: #ffd700;
+      background: rgba(15, 23, 42, 0.8);
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.2);
+    }
+  </style>
 </head>
 <body style="margin:0;padding:0;overflow:hidden;height:100vh;width:100vw;background:#000;font-family:sans-serif;color:#e5e7eb;">
 
@@ -20,8 +57,8 @@ permalink: /404.html
 
   <div style="position:relative;z-index:2;text-align:center;padding:2rem;max-width:800px;">
     <div style="position:relative;display:inline-block;margin-bottom:1rem;">
-      <span style="display:block;font-weight:900;line-height:1;letter-spacing:-0.04em;font-size:clamp(6rem,20vw,14rem);background:linear-gradient(180deg,#a78bfa,#60a5fa);-webkit-background-clip:text;background-clip:text;color:transparent;filter:drop-shadow(0 10px 30px rgba(96,165,250,0.35));">404</span>
-      <span style="position:absolute;left:50%;top:60%;transform:translate(-50%,-50%);font-size:clamp(0.8rem,2vw,1.2rem);letter-spacing:0.5em;text-transform:uppercase;color:rgba(147,197,253,0.3);filter:blur(0.5px);white-space:nowrap;">NOTHINGNESS</span>
+      <span style="display:block;font-weight:900;line-height:1;letter-spacing:-0.04em;font-size:clamp(6rem,20vw,14rem);background:linear-gradient(180deg,#ffd700,#d4a017);-webkit-background-clip:text;background-clip:text;color:transparent;filter:drop-shadow(0 10px 30px rgba(255,215,0,0.35));">404</span>
+      <span style="position:absolute;left:50%;top:60%;transform:translate(-50%,-50%);font-size:clamp(0.8rem,2vw,1.2rem);letter-spacing:0.5em;text-transform:uppercase;color:rgba(255,215,0,0.3);filter:blur(0.5px);white-space:nowrap;">NOTHINGNESS</span>
     </div>
 
     <h2 style="font-weight:800;font-size:clamp(1.5rem,4vw,2.5rem);margin:0.5rem 0 1rem;background:linear-gradient(to right,#fff,#cbd5e1);-webkit-background-clip:text;background-clip:text;color:transparent;">Reality Glitch Detected</h2>
@@ -37,8 +74,8 @@ permalink: /404.html
     </div>
 
     <div style="display:flex;flex-wrap:wrap;justify-content:center;gap:1rem;margin-top:1rem;">
-      <a href="/" style="display:inline-flex;align-items:center;justify-content:center;gap:0.6rem;padding:0.8rem 1.5rem;border-radius:12px;border:1px solid rgba(255,255,255,0.12);background:#ffffff;color:#0f172a;font-weight:600;font-size:0.95rem;cursor:pointer;text-decoration:none;transition:all 0.2s ease;backdrop-filter:blur(4px);">Return to Reality</a>
-      <button id="oracle" type="button" style="display:inline-flex;align-items:center;justify-content:center;gap:0.6rem;padding:0.8rem 1.5rem;border-radius:12px;border:1px solid rgba(255,255,255,0.12);background:rgba(15,23,42,0.6);color:#e5e7eb;font-weight:600;font-size:0.95rem;cursor:pointer;text-decoration:none;transition:all 0.2s ease;backdrop-filter:blur(4px);">↻ Consult the Oracle</button>
+      <a href="/" class="btn-404 btn-return">Return to Reality</a>
+      <button id="oracle" type="button" class="btn-404 btn-oracle">↻ Consult the Oracle</button>
     </div>
 
     <footer style="opacity:0.4;font-size:0.8rem;pointer-events:none;margin-top:2rem;">Searching for meaning... since 1970 (Unix Epoch)</footer>
