Update 404 page styles and quotes; change font families and enhance text content

--- a/assets/404.html
+++ b/assets/404.html
@@ -13,7 +13,7 @@ permalink: /404.html
   <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&family=IBM+Plex+Mono:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600;700;800;900&family=IBM+Plex+Serif:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
   <style>
     :root {
       --void-bg: #010409;
@@ -157,7 +157,8 @@ permalink: /404.html
     .quote-card blockquote {
       margin: 0;
       font-size: 1.1rem;
-      font-family: 'IBM Plex Mono', monospace;
+      font-family: 'IBM Plex Serif', Georgia, serif;
+      font-style: italic;
       color: var(--text-main);
       transition: opacity 0.25s ease;
     }
@@ -292,8 +293,8 @@ permalink: /404.html
 
       <h2 class="void-title" data-parallax="5">Reality Glitch Detected</h2>
       <p class="void-lead" data-parallax="4">
-        Narazil jsi na vakuum. Prohledali jsme servery, databáze i kolektivní nevědomí, ale stránka, kterou hledáš,
-        v tomhle vesmíru prostě neexistuje.
+        You've reached the void. We searched the servers, the database, and the collective unconscious, 
+        but the page you are looking for does not exist in this dimension.
       </p>
 
       <div class="quote-card" data-parallax="6">
@@ -337,18 +338,18 @@ permalink: /404.html
 
   <script>
     const quotes = [
-      'The page you are looking for is merely a social construct.',
-      'I think, therefore I am... 404.',
-      'Not all who wander are lost. But you? You definitely are.',
-      'We found the Answer (42), but we lost the Question (URL).',
-      'The unexamined URL is not worth visiting.',
-      'This page has ascended to a higher plane of existence.',
-      'Error 404: Meaning of Life not found. Try coffee instead.',
-      'Maybe the real page was the friends we made along the way.',
-      'You can\'t step into the same 404 page twice.',
-      'If a tree falls in a forest and no one hears it, does it make a 404?',
-      'There is no spoon. There is no page.',
-      'Have you tried turning the universe off and on again?'
+      "The page you are looking for is merely a social construct.",
+      "I think, therefore I am... 404.",
+      "Not all who wander are lost. But you? You definitely are.",
+      "We found the Answer (42), but we lost the Question (URL).",
+      "The unexamined URL is not worth visiting.",
+      "This page has ascended to a higher plane of existence.",
+      "Error 404: Meaning of Life not found. Try coffee instead.",
+      "Maybe the real page was the friends we made along the way.",
+      "You can't step into the same 404 page twice.",
+      "To err is human; to really foul things up requires a computer.",
+      "There is no spoon. There is no page.",
+      "Have you tried turning the universe off and on again?"
     ];
 
     const starsLayer = document.getElementById('stars');
